--- a/notebooks/Task2.ipynb
+++ b/notebooks/Task2.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "def get_embedding(\n",
     "    adata: AnnData,\n",
-    ") -> AnnData:\n",
+    ") -> None:\n",
     "    \"\"\"Get Geneformer embedding and compute UMAP.\n",
     "\n",
     "    Uses geneformer to create a biologically informed embedding from the count data.\n",
