--- a/notebooks/Task4.ipynb
+++ b/notebooks/Task4.ipynb
@@ -208,22 +208,22 @@
     "for d, f in factors.items()\n",
     "    for g in [\"ENSG00000142168\", \"ENSG00000124164\", \"ENSG00000120948\"]:\n",
     "        # Perturb single gene\n",
-    "        adata_ALS_perturb_1[g] = perturb_genes(adata_unperturbed[adata_unperturbed.obs[\"Condition\"]==\"ALS\"], g, f, copy=True)\n",
-    "        adata_ALS_perturb_1[g].write(f\"../data/adata_ALS_perturb_1_{d}_{g}.h5ad\", compression=\"gzip\")\n",
+    "        adata_ALS_perturb_1 = perturb_genes(adata_unperturbed[adata_unperturbed.obs[\"Condition\"]==\"ALS\"], g, f, copy=True)\n",
+    "        adata_ALS_perturb_1.write(f\"../data/adata_ALS_perturb_1_{d}_{g}.h5ad\", compression=\"gzip\")\n",
     "    \n",
     "        # Get Geneformer embedding\n",
     "        model_config = GeneformerConfig(model_name=\"gf-12L-95M-i4096\", batch_size=10,device=\"cuda\")\n",
     "        geneformer = Geneformer(configurer=model_config)\n",
-    "        dataset = geneformer.process_data(adata_ALS_perturb_1[g], gene_names=\"ensembl_id\", use_raw_counts=True)\n",
-    "        adata_ALS_perturb_1[g].obsm[\"X_geneformer\"] = geneformer.get_embeddings(dataset)\n",
+    "        dataset = geneformer.process_data(adata_ALS_perturb_1, gene_names=\"ensembl_id\", use_raw_counts=True)\n",
+    "        adata_ALS_perturb_1.obsm[\"X_geneformer\"] = geneformer.get_embeddings(dataset)\n",
     "    \n",
     "        # Compute neighbors and UMAP\n",
-    "        sc.pp.neighbors(adata_ALS_perturb_1[g], use_rep=\"X_geneformer\")\n",
-    "        sc.tl.umap(adata_ALS_perturb_1[g])\n",
+    "        sc.pp.neighbors(adata_ALS_perturb_1, use_rep=\"X_geneformer\")\n",
+    "        sc.tl.umap(adata_ALS_perturb_1)\n",
     "    \n",
     "        # Convert var index to str to avoid h5py error and write to disk\n",
-    "        adata_ALS_perturb_1[g].var.index = adata_ALS_perturb_1[g].var.index.astype(str)\n",
-    "        adata_ALS_perturb_1[g].write(f\"../data/adata_ALS_perturb_1_{d}_{g}_geneformer.h5ad\", compression=\"gzip\")"
+    "        adata_ALS_perturb_1.var.index = adata_ALS_perturb_1.var.index.astype(str)\n",
+    "        adata_ALS_perturb_1.write(f\"../data/adata_ALS_perturb_1_{d}_{g}_geneformer.h5ad\", compression=\"gzip\")"
    ]
   },
   {
